# domotics

./: .gitignore  README.md  build-with-rust-backend.py  build.py
.github/workflows/: unittests.yml
domotics-backend/: Cargo.toml
domotics-backend-node/: package-lock.json  package.json  tsconfig.json
domotics-backend-node/src/: index.ts  yeelight.ts
domotics-backend-node/src/__tests__/: yeelight.test.ts
domotics-backend/src/: main.rs
domotics-backend/src/frontend/: mod.rs
domotics-backend/src/lights/: mod.rs
domotics-frontend/: .env.production  package-lock.json  package.json
domotics-frontend/src/: App.css  App.test.tsx  App.tsx  config.ts
domotics-frontend/src/api/: lightsApi.ts
domotics-frontend/src/components/: App.css  App.test.tsx  App.tsx
