[package]
name = "domotics-backend"
version = "0.1.0"
authors = ["Guillaume ERB <guillaume.erb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rocket_cors = "0.5.2"
httparse = "1.3.4"
serde = { version = "1.0.111", features = ["derive"] }
clokwerk = "0.3.0"
lazy_static = "1.4.0"